--- a/python/mqtt_config.json.example
+++ b/python/mqtt_config.json.example
@@ -4,5 +4,6 @@
   "user":"username",
   "password": "hunter2",
   "ca_certs": "/my/path/to/pems/if/ssl/is/desired/certs.pem",
-  "topic": "#"
+  "topic_prefix": "lamp/foo",
+  "timezone": "US/Eastern"
 }
