Update dependency format

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif8266
 board = thing
 framework = arduino
-lib_install = 89,126,567
+lib_deps =
+  PubSubClient
+  WifiManager
+  FastLED
